# cmake-emscripten-vcpkg-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
scripts/relative-antlr4-headers/: main.js  package.json
src/: main.cpp
